<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.riddleandcode.nfcbasic.activities.RegisterActivity">
        <TextView
                android:id="@+id/title"
                android:text="@string/main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="@color/tuna"
                android:gravity="center"/>
        <ImageView
                android:id="@+id/icon_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" android:layout_below="@+id/title"/>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/register_container"
                    android:layout_below="@+id/icon_image">
        <ImageView
                android:id="@+id/map_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_map"
                android:layout_above="@+id/email_login_form"/>
        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">

            <Button
                    android:id="@+id/start_demo_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/start_demo"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_button_layout"
                    android:backgroundTint="@color/amaranth"
                    android:textColor="@android:color/white"/>
            <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_button_layout"
                    android:backgroundTint="@color/tuna"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/signature"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/tuna"
                    android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
    <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.riddleandcode.nfcbasic.fragments.LoginFragment"
            android:layout_below="@id/icon_image"
            android:id="@+id/login_fragment"/>
</RelativeLayout>
