<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.riddleandcode.nfcbasic.activities.TagReaderActivity">
    <LinearLayout
            android:id="@+id/activity_validation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                android:padding="5dp"
                android:layout_gravity="left|center_vertical"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/validation_action_bar_title"
                    android:textColor="@color/amaranth"
                      android:layout_gravity="center_vertical"
                      android:gravity="right"
            android:textSize="22sp"/>
        </LinearLayout>
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@android:color/darker_gray"
        android:layout_margin="5dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/validation_main_title"
                      android:textColor="@color/tuna"
                      android:layout_gravity="center_vertical"
                      android:gravity="center"
                      android:textSize="22sp"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <TextView
                    android:id="@+id/validation_challenge"
                    android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/amaranth"
                      android:layout_gravity="center_vertical"
                      android:gravity="center"
                      android:textSize="16sp"
                      android:layout_marginTop="@dimen/activity_vertical_margin"/>
        </LinearLayout>
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@android:color/darker_gray"
              android:layout_margin="5dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        android:padding="10dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/result"
                      android:textColor="@color/tuna"
                      android:gravity="left"
                      android:textSize="16sp"/>
            <TextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textColor="@color/tuna"
                      android:gravity="left"
                      android:textSize="16sp"
            android:layout_marginTop="5dp"/>
        </LinearLayout>
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@android:color/darker_gray"
              android:layout_margin="5dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/response_details"
                      android:textColor="@color/tuna"
                      android:layout_gravity="center_vertical"
                      android:gravity="left"
                      android:textSize="16sp"/>
            <TextView
                    android:id="@+id/response_details"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textColor="@color/tuna"
                      android:layout_gravity="center_vertical"
                      android:gravity="left"
                      android:textSize="16sp"
                      android:layout_marginTop="5dp"/>
        </LinearLayout>
        <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>